<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/text_color_white"
    android:gravity="center"
    android:id="@+id/no_internet_lin_layout"
    android:orientation="vertical"
    android:padding="16dp">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/no_internet_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:src="@drawable/animated1"/>

    </FrameLayout>
    <TextView
        android:id="@+id/main_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/capriola"
        android:gravity="center"
        android:text="@string/no_internet"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorText" />

    <TextView
        android:id="@+id/secondary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/allerta_stencil"
        android:gravity="center"
        android:text="@string/check_network"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/darkGray" />

    <Button
        android:id="@+id/retry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/retry_buttom"
        android:paddingStart="22dp"
        android:paddingTop="4dp"
        android:paddingEnd="22dp"
        android:paddingBottom="4dp"
        android:text="@string/retry"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/blue"
        android:textStyle="bold" />

</LinearLayout>
