<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ViewSingleCountryDetailsActivity">

    <!--county image-->
    <ImageView
        android:id="@+id/separate_country_flag"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--county name-->
    <TextView
        android:id="@+id/separate_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country_hint"
        android:textSize="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/capriola"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separate_country_flag" />

    <!--county capital-->
    <TextView
        android:id="@+id/capital_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capital_hint"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/capriola"
        android:padding="10dp"
        android:textColor="@color/text_color"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separate_country_name" />

    <TextView
        android:id="@+id/capital_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="India"
        android:textColor="@color/text_color"
        android:textSize="16dp"
        android:fontFamily="@font/allerta_stencil"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/capital_tv"
        app:layout_constraintStart_toStartOf="@+id/sub_region_value"
        app:layout_constraintTop_toTopOf="@+id/capital_tv" />

    <!--county region-->
    <TextView
        android:id="@+id/region_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/region_hint"
        android:textSize="20dp"
        android:textStyle="bold"
        android:padding="10dp"
        android:fontFamily="@font/capriola"
        android:textColor="@color/text_color"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/capital_tv" />

    <!--county sub region-->
    <TextView
        android:id="@+id/region_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Chennai"
        android:textColor="@color/text_color"
        android:fontFamily="@font/allerta_stencil"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/region_tv"
        app:layout_constraintStart_toStartOf="@+id/sub_region_value"
        app:layout_constraintTop_toTopOf="@+id/region_tv"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/sub_region_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sub_region_hint"
        android:textSize="20dp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:fontFamily="@font/capriola"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/region_value" />

    <TextView
        android:id="@+id/sub_region_value"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Chennai"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintWidth_default="wrap"
        android:textColor="@color/text_color"
        android:fontFamily="@font/allerta_stencil"
        android:padding="10dp"
        android:layout_marginLeft="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/sub_region_tv"
        app:layout_constraintStart_toEndOf="@+id/sub_region_tv"
        app:layout_constraintTop_toTopOf="@+id/sub_region_tv" />

    <!--county area-->
    <TextView
        android:id="@+id/area_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/area_hint"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/text_color"
        android:fontFamily="@font/capriola"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_region_tv" />

    <TextView
        android:id="@+id/area_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="Chennai"
        android:textColor="@color/text_color"
        android:fontFamily="@font/allerta_stencil"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/area_tv"
        app:layout_constraintStart_toStartOf="@+id/sub_region_value"
        app:layout_constraintTop_toTopOf="@+id/area_tv" />

    <!--county population-->
    <TextView
        android:id="@+id/population_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/population_hint"
        android:textSize="20dp"
        android:textColor="@color/text_color"
        android:textStyle="bold"
        android:padding="10dp"
        android:fontFamily="@font/capriola"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/area_tv" />

    <TextView
        android:id="@+id/population_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="100"
        android:textColor="@color/text_color"
        android:fontFamily="@font/allerta_stencil"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/population_tv"
        app:layout_constraintStart_toStartOf="@+id/sub_region_value"
        app:layout_constraintTop_toTopOf="@+id/population_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>